src/objects/SSO_Redirect_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DIsplay_Name__c</fullName>
        <label>DIsplay Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federation_Identifier_Attribute_Name__c</fullName>
        <label>Federation Identifier Attribute Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Location__c</fullName>
        <label>Login Location</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portal_Redirect_Location__c</fullName>
        <label>Portal Redirect Location</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Standard_Redirect_Location__c</fullName>
        <label>Standard Redirect Location</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SSO Redirect Configuration</label>
</CustomObject>